--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-nav></app-nav>
- 
 <div class="container" id="listcontainer">
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 </div>
